[package]
name = "pont-faucet"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont Testnet utility services"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
bytes = "1.1.0"
clap = "3.1.8"
futures = "0.3.21"
hex = "0.4.3"
rand = "0.7.3"
reqwest = { version = "0.11.10", features = ["blocking"], default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.21.0", features = ["full"] }
url = "2.2.2"
warp = "0.3.2"

pont-config = { path = "../../config" }
pont-crypto = { path = "../pont-crypto" }
pont-global-constants = { path = "../../config/global-constants" }
pont-keygen = { path = "../pont-keygen" }
pont-logger = { path = "../pont-logger" }
pont-rest-client = { path = "../../crates/pont-rest-client" }
pont-sdk = { path = "../../sdk" }
pont-warp-webserver = { path = "../pont-warp-webserver" }

[dev-dependencies]
serde_json = "1.0.81"
tempfile = "3.3.0"

pont-config = { path = "../../config" }
pont-infallible = { path = "../../crates/pont-infallible" }
