[package]
name = "pont-infallible"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont utilities for infallible types"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]

