[package]
name = "pont-keygen"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Command line utility to generate Ed25519 key pairs for testing"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rand = "0.7.3"

pont-crypto = { path = "../pont-crypto" }
pont-types = { path = "../../types" }

